Finish cover page frontend

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Факультатив з розробки ігор</title>
-    <link >
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JunkoTeam events</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
+<div id="wrap">
     <header>
-        <h1></h1>
+        <span class="logo">
+            <a href="index.html"><img alt="FIT logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzojDnlcefrIkofg5Meb73uiRP1rAjk4qz5w&s">&nbsp;& JunkoTeam</a></span>
+        <nav class="navbar_header">
+            <ul>
+                <li><a href="form.html">Events</a></li>
+                <li><a href="form.html"><img alt="user-icon" src="icons/user.png"></a></li>
+            </ul>
+        </nav>
     </header>
+    <br>
+    <main>
+        <h1 id="header_h1">Варіант №7<br>Сайт з реєстрації на події</h1>
+    <div class="flex_container_vital_card">
+        <div class="vital_card">
+            <div class="vital_card_img">
+                <img src="icons/logo_JunkoTeam.png" alt="logo_JunkoTeam">
+            </div>
+            <div class="btn">
+            <a href="form.html">Register for the event </a>
+            </div>
+            <div class="vital_card_text">
+            <p id="vital_card_text">Ми, команда JunkoTeam, проводимо різні події та івенти за участі різних відомих корпорацій та організацій або просто в цікавих місцях для учасників освітнього процесу за участі FITa</p>
+            </div>
+        </div>
+    </div>
+
+    </main>
+</div>
+    <footer>
+        <div class="footer_contacts">
+            <h3>Контакти</h3>
+            <ul>
+                <li>Номер телефону менеджера: 067 34 23 906</li>
+            </ul>
+        </div>
+        <div class="footer_about_us">
+            <ul>
+                <li><a href="#">Про нас</a></li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 </html>
