Final version LR1

--- a/Frontend/pages/coming_soon.html
+++ b/Frontend/pages/coming_soon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заповнення форми</title>
-    <link rel="stylesheet" href="../css/style_form.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/header.css">
     <script src="../scripts/script.js" defer></script>
 </head>
@@ -11,11 +11,11 @@
 <div id="wrap">
 <header>
    <span class="logo">
-            <a href="index.html"><img alt="FIT logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzojDnlcefrIkofg5Meb73uiRP1rAjk4qz5w&s">&nbsp;& JunkoTeam</a>
+            <a href="index.html"><img alt="FIT logo" src="../icons/FIT_icon.png">&nbsp;& JunkoTeam</a>
    </span>
     <nav class="navbar_header">
         <ul>
-            <li> <a href="form.html">Events</a></li>
+            <li> <a href="coming_soon.html">Events</a></li>
         </ul>
     </nav>
 </header>
